ChatGPT3.5 & Yandex Translate support

--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -14,8 +14,8 @@
             <div>
                 <select class="select1" name="models" id="model-select">
                     <option value="google_translate">Google переводчик</option>
-                    <option value="test1">тест1</option>
-                    <option value="test2">тест2</option>
+                    <option value="ChatGPT3.5">ChatGPT3.5</option>
+                    <option value="yandex_translate">Yandex переводчик</option>
                 </select>
             </div>
             <div>
@@ -64,16 +64,16 @@
             </div>
             <div>
                 <select name="fontsize" id="fontsize-select" class="select2">
-                    <option value="8">8</option>
                     <option value="10">10</option>
                     <option value="12">12</option>
                     <option value="14">14</option>
-                    <option value="16" selected>16</option>
-                    <option value="18">18</option>
+                    <option value="16">16</option>
+                    <option value="18" selected>18</option>
                     <option value="20">20</option>
                     <option value="22">22</option>
                     <option value="24">24</option>
                     <option value="26">26</option>
+                    <option value="28">28</option>
                 </select>
             </div>
              <div class="up-menu mycontainer">
