--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -229,6 +229,7 @@
 
                                         const avgColorHex = rgbToHex(avgR, avgG, avgB);
                                         colorValue.textContent = avgColorHex;
+                                        colorPicker.value = avgColorHex;
                                     }
                                 };
                             });
