--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -53,7 +53,7 @@
                 <select name="fonts" id="fonts-select" class="select2">
                     <option value='"Times New Roman"'>Times New Roman</option>
                     <option value="Arial" selected>Arial</option>
-                    <option value='"Comic Sans MS"'' >Comic Sans MS</option>
+                    <option value='"Comic Sans MS"' >Comic Sans MS</option>
                 </select>
             </div>
             <div>
