--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -38,7 +38,7 @@
             <div><textarea id="translated-text"></textarea></div>
             <div id="translate-refresh">
                 <button class="button" id="translate-button">Перевести</button>
-                <img src="static/refresh.png"/>
+                <img src="static/refresh.png" id="refresh"/>
             </div>
             <button class="button" onclick="downloadImage()">Скачать</button>
         </div>
